<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/surface_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_surface"/>

    <EditText
        android:id="@+id/pieces_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number_of_rooms"
        android:minHeight="48dp" />

    <CheckBox
        android:id="@+id/pool_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_a_pool"/>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"/>

    <TextView
        android:id="@+id/tax_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax"/>
</LinearLayout>
